--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,7 +1,9 @@
 .app {
     text-align: center;
-    font-family: Arial, sans-serif;
-    padding: 2rem;
+    font-family: 'Quicksand';
+    width: 100%;
+    height: 100%;
+    padding-top: 1rem;
 }
 
 .prompt {
@@ -14,4 +16,20 @@ input {
     padding: 0.5rem;
     width: 100%;
     max-width: 600px;
+    border: none;
+    border-color: none;
+}
+
+.chart-container {
+    padding: 1rem;
+    max-width: 900px;
+    margin: 0 auto;
+    margin-top: 1rem;
+}
+
+.chart-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    text-align: left;
 }
