--- a/client/src/styles/TypingTest.scss
+++ b/client/src/styles/TypingTest.scss
@@ -21,7 +21,7 @@
         font-size: 1.5rem !important;
         line-height: 2.8rem;
         text-align: center;
-        max-width: 90%;
+        max-width: 80%;
         word-wrap: break-word;
         padding: 1rem;
     }
@@ -79,6 +79,17 @@
     .restart {
         background-color: white;
         margin-left: 50%;
+        margin-top: -2rem;
+        padding: 0.5rem 1rem;
         font-size: 16px;
+        font-weight: bold;
+        border: 2px solid black;
+        background: none;
+        cursor: pointer;
+    
+        &:hover {
+            background: black;
+            color: white;
+        }
     }
 }
