--- a/client/src/styles/LoginPage.scss
+++ b/client/src/styles/LoginPage.scss
@@ -1,4 +1,5 @@
 .login-container {
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,8 +8,8 @@
 
     h1 {
         font-size: 3rem;
-        margin: 20px 0;
-        margin-bottom: 50px;
+        margin: 10px 0;
+        margin-bottom: 35px;
     }
 
     .login-icon {
@@ -36,6 +37,6 @@
         font-size: 16px;
         font-weight: normal;
         opacity: 0.5;
-        margin-top: 2rem;
+        margin-top: 1.5rem;
     }
 }
